force-app/main/default/objects/CommunicationLog__c/CommunicationLog__c.object-meta.xml
<CustomObject>
    <description>Central object to send communications</description>
    <label>Communication Nub</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Communication Nub Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Nub</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>