force-app/main/default/objects/CommunicationLog__c/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <label>Email Subject</label>
    <type>TextArea</type>
</CustomField>