force-app/main/default/objects/CommunicationLog__c/fields/processed_reminder_batch__c.field-meta.xml
<CustomField>
    <fullName>processed_reminder_batch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to check if the record was created via application reminder batch and is processed only once</inlineHelpText>
    <label>processed_reminder_batch</label>
    <type>Checkbox</type>
</CustomField>