force-app/main/default/objects/CommunicationLog__c/fields/Recipient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone_Number__c</fullName>
    <description>Recipient Phone Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Phone Number</label>
    <type>Phone</type>
</CustomField>