force-app/main/default/objects/CommunicationLog__c/fields/SendersName__c.field-meta.xml
<CustomField>
    <fullName>SendersName__c</fullName>
    <label>Sender&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>