force-app/main/default/objects/CommunicationLog__c/fields/SendersPhone__c.field-meta.xml
<CustomField>
    <fullName>SendersPhone__c</fullName>
    <label>Sender&apos;s Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>