force-app/main/default/objects/CommunicationLog__c/fields/SendMail__c.field-meta.xml
<CustomField>
    <fullName>SendMail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field created to decide if the mail should be sent or not.</description>
    <label>Send Mail ?</label>
    <type>Checkbox</type>
</CustomField>