force-app/main/default/objects/CommunicationLog__c/fields/SMSReceivers__c.field-meta.xml
<CustomField>
    <fullName>SMSReceivers__c</fullName>
    <label>SMS Receivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>