force-app/main/default/objects/CommunicationLog__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>SourceSystem</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>SSP</fullName>
                
                    <default>true</default>
                
                    <label>SSP</label>
                
                </value>
            
                <value>
                
                    <fullName>RE</fullName>
                
                
                    <label>RE</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>