force-app/main/default/objects/CommunicationLog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Completed</fullName>
                
                
                    <label>Completed</label>
                
                </value>
            
                <value>
                
                    <fullName>Failed</fullName>
                
                
                    <label>Failed</label>
                
                </value>
            
                <value>
                
                    <fullName>In Queue</fullName>
                
                
                    <label>In Queue</label>
                
                </value>
            
                <value>
                
                    <fullName>In Progress</fullName>
                
                
                    <label>In Progress</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>