force-app/main/default/objects/CommunicationLog__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>