force-app/main/default/objects/CommunicationLog__c/fields/TriggeredRecordId__c.field-meta.xml
<CustomField>
    <fullName>TriggeredRecordId__c</fullName>
    <label>Triggered Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>