force-app/main/default/objects/CommunicationLog__c/fields/TriggeredRecordName__c.field-meta.xml
<CustomField>
    <fullName>TriggeredRecordName__c</fullName>
    <label>Triggered Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>